@@ -4,7 +4,7 @@
 <div id="typo3-docheader">
 <div id="typo3-docheader-row1">
 <div class="buttonsleft">
-	<f:if condition="{pageUid} > 0">
+	<f:if condition="{showPreviewLink}">
 		<a href="#" onclick="TYPO3.Workspaces.Actions.generateWorkspacePreviewLink();return false;" title="Generate page preview" id="goPreviewLinkButton"><span class="t3-icon t3-icon-extensions t3-icon-extensions-workspaces t3-icon-workspaces-generatepreviewlink">&nbsp;</span>Generate Workspace Preview Link</a>
 	</f:if>
 </div>
